[package]
name = "superkmeans-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ParadeDB <support@paradedb.com>"]
description = "A Rust port of SuperKMeans: fast k-means clustering for high-dimensional vector embeddings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/paradedb/superkmeans-rs"
homepage = "https://github.com/paradedb/superkmeans-rs"
categories = ["algorithms", "science", "mathematics"]
keywords = ["kmeans", "clustering", "embeddings", "vector", "simd"]

[lib]
name = "superkmeans"
path = "src/lib.rs"

[features]
# Route all SGEMM through a vendor BLAS (`cblas_sgemm`) instead of matrixmultiply.
# `blas` is an internal marker enabled by each concrete backend below.
blas = []
accelerate = ["blas"]    # Apple Accelerate (macOS, AMX)
openblas = ["blas"]      # OpenBLAS (Linux/Windows/macOS); linked via build.rs

[dependencies]
matrixmultiply = { version = "0.3", features = ["threading"] }
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

[build-dependencies]
# Used only to locate a system OpenBLAS when the `openblas` feature is on.
pkg-config = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[example]]
name = "simple_clustering"
path = "examples/simple_clustering.rs"

[[example]]
name = "hierarchical_clustering"
path = "examples/hierarchical_clustering.rs"
